--- a/VersionTaskTracker/VersionTaskTracker.csproj
+++ b/VersionTaskTracker/VersionTaskTracker.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="PathLib" Version="0.9.8" />
+    <PackageReference Include="System.IO.Abstractions" Version="21.1.3" />
   </ItemGroup>
 
   <ItemGroup>
